--- a/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
+++ b/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
@@ -126,6 +126,7 @@
             <div class="form-group">
                 {{ form.as_p }}
             </div>
+            {{ text }}
             <button type="submit" class="btn btn-primary btn-block btn-large">Load</button>
             <a href="/accounts/profile" class="recover-password-link">Return to the Main Page</a>
         </form>
