повернув кнопку скачування звіту

--- a/ParkEasy/admin_panel/templates/admin_panel/reports.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/reports.html
@@ -4,7 +4,7 @@
     <div class="reports-container" style="text-align: center; margin-top: 30px;">
         <div class="report-item" style="display: flex; align-items: center; justify-content: center; gap: 20px; padding: 20px;">
             <h3 style="font-size: 1.5rem; margin: 0;">Parking History (Last 30 Days)</h3>
-            <a href="{% url 'admin_panel:download_parking_report' %}" class="btn btn-success" style="font-size: 1rem; padding: 10px 20px;">
+            <a href="{% url 'admin_panel:generate_user_parking_report' %}" class="btn btn-success" style="font-size: 1rem; padding: 10px 20px;">
                 <i class="bi bi-file-earmark-excel"></i>Download
             </a>
         </div>
