--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -184,7 +184,7 @@
                 <a href="/neunet/upload_image_start/" class="btn-parking start-parking mt-3">Start Parking</a>
                 <a href="/neunet/upload_image_finish/" class="btn-parking finish-parking mt-4">Finish Parking</a>
                 <a href="{% url 'users:generate_user_parking_report' %}" class="btn btn-success mt-4" style="font-size: 1rem; padding: 10px 20px;">
-                    <i class="bi bi-file-earmark-excel"></i>Download
+                    <i class="bi bi-file-earmark-excel"></i>Download Report
                 </a>
             </div>
         </div>
